# fps-genie

./: .gitattributes  .gitignore  .rustfmt.toml  CHANGELOG.md  CI_INFRASTRUCTURE_PLAN.md  COPILOT_SETUP.md  Cargo.toml  Dockerfile  IMPLEMENTATION_SUMMARY.md  INFRASTRUCTURE_COORDINATION.md  MLMOVE_INTEGRATION.md  PROJECT_CHARTER.md  PROJECT_CONTEXT.md  README.md  SIMPLIFIED_CICD.md  VITALITY_DEMO_TEST_RESULTS.md  ci-improvements-analysis.md  ci-pipeline-comparison.md  ci_test_results.md  complete_build_output.txt  complete_setup.sh  deploy-k8s.sh  docker-compose.dev.yml  docker-compose.yml  env_setup.sh  result.txt  setup.sh  setup_databases.sh  setup_mcp_servers.sh  start_dev.sh  start_jupyter.sh  test_dev_setup.sh  test_output.txt
.cargo/: config.toml
.devcontainer/: DEV_GUIDE.md  Dockerfile  Dockerfile.api  README.md  devcontainer.json  post-create.sh  qdrant-config.yaml  setup.sh  setup_jupyter.sh
.devcontainer/grafana/datasources/: timescaledb.yaml
.devcontainer/test-data/: sample_data.sql
.docker/: base.Dockerfile
.github/: copilot-chat.json  copilot-instructions.md  copilot-workspace.json
.github/workflows/: base-images.yml  ci-docker.yml  ci.yml  full-integration.yml  github_workflows_copilot-agent.yml  ml-pipeline.yml  performance.yml  release.yml  security.yml
.mcp/: settings.json
.mcp-servers/: README.md  cargo-helper.js  database-inspector.js  demo-analyzer.js  package.json
cs2-analytics/: Cargo.toml
cs2-analytics/src/: analysis.rs  lib.rs  main.rs  models.rs  pro_reference.rs  training.rs  visualization.rs
cs2-client/: Cargo.toml
cs2-client/src/: lib.rs
cs2-common/: Cargo.toml
cs2-common/src/: feature_extraction.rs  lib.rs  parsing_features.rs  team_decision_extraction.rs  temporal_extraction.rs
cs2-data-pipeline/: Cargo.toml
cs2-data-pipeline/src/: database.rs  lib.rs  main.rs  models.rs  pipeline.rs
cs2-data-pipeline/tests/: database_tests.rs  pipeline_tests.rs
cs2-demo-analyzer/: Cargo.toml
cs2-demo-analyzer/src/: enhanced_analyzer.rs  main.rs
cs2-demo-analyzer/tests/: cli_tests.rs
cs2-demo-parser/: Cargo.toml  README_DATA_MODULE.md
cs2-demo-parser-next/: Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md
cs2-demo-parser-next/benches/: parser_benchmarks.rs
cs2-demo-parser-next/src/: common.rs  entities.rs  events.rs  game_state.rs  lib.rs  net_messages.rs  parser.rs
cs2-demo-parser-next/tests/integration/: parser_tests.rs
cs2-demo-parser/src/: data.rs  e2e_test.rs  lib.rs  parse_demo.rs  real_demo_tests.rs
cs2-demo-parser/src/first_pass/: fallbackbytes.rs  frameparser.rs  parser.rs  parser_settings.rs  prop_controller.rs  read_bits.rs  sendtables.rs  stringtables.rs
cs2-demo-parser/src/second_pass/: collect_data.rs  decoder.rs  entities.rs  game_events.rs  other_netmessages.rs  parser.rs  parser_settings.rs  path_ops.rs  variants.rs
cs2-integration-tests/: Cargo.toml
cs2-integration-tests/benches/: pipeline_performance.rs  real_demo_performance.rs  standalone_performance.rs
cs2-integration-tests/src/: e2e_tests.rs  lib.rs  test_infrastructure.rs
cs2-integration-tests/tests/: infrastructure_integration.rs  real_demo_tests.rs
cs2-ml/: Cargo.toml  README.md  build.rs
cs2-ml/src/: conversion_utils.rs  data.rs  lib.rs  main.rs  ml_architectures.rs  mlmove_transformer.rs  model.rs  player.rs  server.rs
csgoproto/: Cargo.toml  build.rs
csgoproto/src/: lib.rs  message_type.rs  parser.rs  protobuf.rs
docs/analysis/: parsing_interface.md
docs/architecture/: persistence.md
garage/: config.toml
k8s/: README.md  fps-genie-app.yaml  namespace-and-config.yaml  postgres.yaml  redis-qdrant.yaml
migrations/: 000001_init.sql
notebooks/: cs2_ml_analysis.ipynb
notebooks/.ipynb_checkpoints/: cs2_ml_analysis-checkpoint.ipynb
sql/: 00_base_schema.sql  01_optimizations.sql  init.sql
test_data/: test_demo.dem  vitality-vs-spirit-m1-dust2.dem
