[workspace]
members = [
    "cs2-client",
    "cs2-common",
    "cs2-demo-analyzer",
    "cs2-demo-parser",
    "cs2-demo-parser-next",
    "cs2-ml",
    "cs2-data-pipeline",
    "cs2-integration-tests",
    "cs2-analytics",
    "csgoproto"
]
resolver = "2"

[workspace.dependencies]
parquet = "^54"
arrow = "^54"
arrow-array = "^54"
arrow-arith = "^54"
rand = "0.9"
rand_core = "0.9"
rand_chacha = "0.9"
rand_distr = "0.5"
getrandom = "0.3"
