[package]
name = "cs2-analytics"
version = "0.1.0"
edition = "2021"

[dependencies]
cs2-common = { path = "../cs2-common" }
cs2-demo-parser = { path = "../cs2-demo-parser" }
cs2-ml = { path = "../cs2-ml" }
cs2-data-pipeline = { path = "../cs2-data-pipeline" }

# Advanced ML and Analytics - using only Candle to avoid conflicts
tokio = { version = "1.0", features = ["full"] }
candle-core = { version = "0.9", features = ["metal"] }
candle-nn = { version = "0.9", features = ["metal"] }
candle-transformers = { version = "0.9", features = ["metal"] }

# Data processing
polars = { version = "0.37", features = ["lazy", "parquet", "sql"] }
arrow = "54.0"
numpy = "0.21"

# Scientific computing
ndarray = "0.16"
linfa = "0.7"
linfa-clustering = "0.7"
smartcore = "0.3"

# Visualization and reporting
plotters = "0.3"

# Error handling
anyhow = "1.0"

# Configuration and CLI
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.0", features = ["derive", "env"] }
config = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"

# Utilities
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

[[bin]]
name = "cs2-analytics"
path = "src/main.rs"
