[package]
name = "cs2-data-pipeline"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
ahash = "0.8"
chrono = { version = "0.4", features = ["clock", "serde"] }
futures = "0.3"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
uuid = { version = "1.18.0", features = ["v1", "v3", "v4", "v5", "v6", "v7", "v8", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.5"
clap = { version = "4.5", features = ["derive", "env"] }
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tempfile = "3"

# Postgres/Timescale
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "macros", "uuid", "chrono", "migrate"] }

# Vector DB (Qdrant)
qdrant-client = "1.15"

# Local crates
cs2-common = { path = "../cs2-common" }
cs2-demo-parser = { path = "../cs2-demo-parser" }