[package]
name = "cs2-demo-analyzer"
version = "0.1.0"
edition = "2021"

[dependencies]
cs2-common = { path = "../cs2-common" }
cs2-ml = { path = "../cs2-ml" }
anyhow = "1.0"
clap = { version = "4", features = ["derive"] }
polars = { version = "0.38.3", features = ["lazy", "parquet", "ipc"] }
plotters = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
tempfile = "3.8"
rstest = "0.26"
testcontainers = "0.25"
assert_cmd = "2.0"
predicates = "3.0"
