[package]
name = "cs2-integration-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
cs2-common = { path = "../cs2-common" }
cs2-data-pipeline = { path = "../cs2-data-pipeline" }
cs2-ml = { path = "../cs2-ml" }

# Testing framework
tokio = { version = "1.0", features = ["full"] }
tokio-test = "0.4"

# Test containers - use blocking client
testcontainers = { version = "0.20", features = ["blocking"] }

# Database testing
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres"] }

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Utilities
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4"] }
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
tempfile = "3.0"

# Performance benchmarking
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "pipeline_performance"
harness = false
