[package]
name = "cs2-ml"
version = "0.1.0"
edition = "2021"

[lib]
name = "cs2_ml"
path = "src/lib.rs"

[[bin]]
name = "cs2-ml"
path = "src/main.rs"

[dependencies]
tch = "0.20"
parquet = { workspace = true }
arrow = { workspace = true }
arrow-array = { workspace = true }
arrow-arith = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
glob = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
bytemuck = "1.14"
anyhow = "1.0"
byteorder = "1.5"
ahash = "0.8"
cs2-common = { path = "../cs2-common" }
cs2-demo-parser = { path = "../cs2-demo-parser" }

[dev-dependencies]
tempfile = "3.8"
rstest = "0.26"
testcontainers = "0.25"

[build-dependencies]
pyo3-build-config = "0.25"
