[package]
name = "cs2-ml"
version = "0.1.0"
edition = "2021"

[lib]
name = "cs2_ml"
path = "src/lib.rs"

[[bin]]
name = "cs2-ml"
path = "src/main.rs"

[dependencies]
cs2-common = { path = "../cs2-common" }
cs2-demo-parser = { path = "../cs2-demo-parser" }

# ML Framework - using Candle instead of PyTorch to avoid conflicts
candle-core = { version = "0.9.1", features = [] }
candle-nn = { version = "0.9.1", features = [] }

# Serialization
serde = { version = "1.0", features = ["derive"] }

# Data structures and utilities
ahash = "0.8"
bytemuck = "1.0"
glob = "0.3"

# Data processing and serialization
arrow = "54.0"
parquet = "54.0"

# Error handling and utilities
anyhow = "1.0"

# CLI
clap = { version = "4.0", features = ["derive"] }
tracing-subscriber = "0.3.19"

# Temporary file handling
tempfile = "3.0"

[dev-dependencies]
tempfile = "3.0"
