[package]
name = "csgoproto"
version = "0.1.5"
authors = ["Laiho"]
edition = "2021"

[lib]
crate-type = ["lib"]

[dependencies]
prost = "0.14"
phf = { version = "0.12", features = ["macros"] }
strum = { version = "0.27", features = ["derive"] }
winnow = { version = "0.7", features = ["simd"] }

[build-dependencies]
prost-build = "0.14"
